Wed Jun 17 17:31:27 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* minstd.c: added Park and Millers MINSTD generator

Thu Jun 11 18:08:40 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* this will be an alternate, thread-safe interface to the random
 	number generators.
