@@ -4,24 +4,11 @@
 #include <gsl_errno.h>
 #include <gsl_rng.h>
 
-/* gsl_rng_internal is a non-const version of gsl_rng, for creating gsl_rngs */
-
-typedef struct {
-  const char * name ;
-  unsigned long int max ;
-  size_t size ;
-  void * state ;
-  void (* set)(void * state, unsigned int seed) ;
-  unsigned long int (* get)(void * state) ;
-} gsl_rng_internal ;   
-
-static gsl_rng * reference_to_generator (gsl_rng_internal * r) ;
-
 gsl_rng *
 gsl_rng_alloc (const gsl_rng_type * T)
 {
   
-  gsl_rng_internal * r = (gsl_rng_internal *) malloc(sizeof(gsl_rng)) ;
+  gsl_rng * r = (gsl_rng *) malloc(sizeof(gsl_rng)) ;
 
   if (r == 0) 
     {
@@ -45,16 +32,16 @@ gsl_rng_alloc (const gsl_rng_type * T)
   r->set = T->set ;
   r->get = T->get ;
 
-  gsl_rng_set ((gsl_rng *)r, gsl_rng_default_seed) ; /* seed the generator */
+  gsl_rng_set (r, gsl_rng_default_seed) ; /* seed the generator */
 
-  return reference_to_generator (r);
+  return r;
 }
 
 
 gsl_rng *
 gsl_rng_clone (const gsl_rng * q)
 {
-  gsl_rng_internal * r = (gsl_rng_internal *) malloc(sizeof(gsl_rng)) ;
+  gsl_rng * r = (gsl_rng *) malloc(sizeof(gsl_rng)) ;
 
   if (r == 0) 
     {
@@ -80,14 +67,7 @@ gsl_rng_clone (const gsl_rng * q)
 
   memcpy(r->state, q->state, q->size) ;
 
-  return reference_to_generator (r);
-}
-
-
-static gsl_rng * reference_to_generator (gsl_rng_internal * r)
-{
-  gsl_rng * r_const = (gsl_rng *) r ;
-  return r_const ;
+  return r;
 }
 
 void gsl_rng_set (const gsl_rng * r, unsigned int seed)
